test/instance-checks-6.err.expect
test/instance-checks-6.ktn:1:1: error: cannot solve scalar type constraint int (from example) = t1 (from example)
test/instance-checks-6.ktn:1:1: note: t1 (from example) is from here
test/instance-checks-6.ktn:1:13: note: int (from example) is from here
